@@ -11,6 +11,7 @@
 ############################################################################
 
 INSTANCE	?= stxxl
+INSTANCE	?= pmstxxl
 INSTANCE	?= mcstxxl
 
 TOPDIR		?= ../..
